--- a/src/App.css
+++ b/src/App.css
@@ -27,7 +27,11 @@
 .App-link {
   color: #61dafb;
 }
-
+.card-container {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
 @keyframes App-logo-spin {
   from {
     transform: rotate(0deg);
