--- a/src/App.css
+++ b/src/App.css
@@ -1,42 +1,17 @@
-.App {
-  text-align: center;
+body{
+  background-image: url(../images/slider-bg.png);
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+.ToDoCard:hover{
+  padding: 3px 0;
+  box-shadow: rgba(242, 109, 149, 0.2) 0px 2px 8px 0px;
 }
+.addButton{
+  background: #2A7B9B;
+background: linear-gradient(90deg, rgba(42, 123, 155, 1) 0%, rgba(87, 199, 133, 1) 50%, rgba(237, 221, 83, 1) 100%);
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
 }
+.gradient-text {
+color: rgb(24, 110, 102) !important;
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
-}
-
-.App-link {
-  color: #61dafb;
-}
-.card-container {
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-}
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
 }
